<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sea"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/user_email_edt"
        android:hint="@string/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/user_password_edt"
        android:hint="@string/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in_button"
        android:text="@string/sign_in_text"
        android:textColor="@android:color/holo_red_dark"
        android:background="@android:color/transparent"
        android:textSize="13sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sign_up_button"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/holo_red_dark"
        android:background="@android:color/transparent"
        android:textSize="13sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>