<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sea"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/create_account_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <AutoCompleteTextView
        android:id="@+id/user_name"
        android:hint="@string/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <AutoCompleteTextView
        android:id="@+id/user_email_for_creation"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/password_for_creation"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/create_account_button_for_creation"
        android:text="@string/create_account_text"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>